--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <nav id="navbar">
-        <div class="brand">Hiquepuff</div>
+        <a href="https://hiquepuff.github.io/fcc-personal-portfolio/">
+            <div class="brand">Hiquepuff</div>
+        </a>
 
         <ul>
             <li><a href="#welcome-section">About</a></li>
